--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,2 +1,4 @@
-<h1>Groups#index</h1>
-<p>Find me in app/views/groups/index.html.erb</p>
+<%= link_to "New Group", new_group_path %>
+<% (@groups ||= []).each do |group| %>
+  <%= group.name %>
+<% end %>
