Users can't view groups they aren't in

--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,4 +1,4 @@
 <%= link_to "New Group", new_group_path %>
 <% (@groups ||= []).each do |group| %>
-  <%= group.name %>
+  <%= link_to group.name, url_for(group) %>
 <% end %>
