--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,6 +1,7 @@
-<%= link_to "New Group", new_group_path %>
-<% (@groups ||= []).each do |group| %>
-  <%= link_to group.name, url_for(group) %>
-<% end %>
+<p><%= link_to "New Group", new_group_path %></p>
 
-<%= current_user.facebook.get_connections("me", "friends").size %>
+<ul>
+  <% (@groups ||= []).each do |group| %>
+    <li><%= link_to group.name, url_for(group) %></li>
+  <% end %>
+</ul>
