--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,8 +1,10 @@
-<% @users.each do |user| %>
-  <%= user.name %>
-<% end %>
-
 <%= link_to "Back", groups_path %>
+
+<ul>
+  <% @users.each do |user| %>
+    <li><%= user.name %></li>
+  <% end %>
+</ul>
 
 <script>
   <%= render "chat.js" %>
