chat should be done. But who knows?

--- a/app/views/groups/_chat.js.erb
+++ b/app/views/groups/_chat.js.erb
@@ -36,8 +36,10 @@ $(document).ready(function() {
 
     message = {
       type: "message",
-      message: "hi"
+      message: $("input[name=message]").val()
     }
+
+    $("input[name=message]").val("");
 
     message = JSON.stringify(message);
 
