Adding users to groups

--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -8,7 +8,7 @@
 
 <form id="chat-input">
   <input type="text" name="message">
-  <input type="submit" name="send-message">
+  <input type="submit" name="send-message" value="Send">
 </form>
 
 <div id="chat-box">
