--- a/app/assets/stylesheets/groups.scss
+++ b/app/assets/stylesheets/groups.scss
@@ -1,3 +1,8 @@
-// Place all the styles related to the groups controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+
+#map-canvas {
+  height: 500px;
+  width: 500px;
+  margin: auto;
+  padding: 0;
+  border: 5px solid black;
+}
