--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,11 @@
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= javascript_include_tag 'application'  %>
   <%= csrf_meta_tags %>
+
+  <!-- api key possibly needs to be relocated -->
+  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCvbVDTuIX7MrUCHeZkkCEU44EDdFiFKKw"></script>
+  <script src="https://code.jquery.com/jquery-1.11.2.js"></script>
+
 </head>
 <body>
 
