Can add a user only once to a group

--- a/app/views/groups/_map.js.erb
+++ b/app/views/groups/_map.js.erb
@@ -6,11 +6,11 @@ function findme(){
 function initialize(location) {
   var currentlocation = new google.maps.LatLng(location.coords.latitude, location.coords.longitude)
 
-  $.ajax({
-    url:
-    type: "get",
-    dataType: "json"
-  })
+  // $.ajax({
+  //   url:
+  //   type: "get",
+  //   dataType: "json"
+  // })
 
 
 // ajax call to update current users latitude and longitude
