--- a/app/views/groups/edit.html.erb
+++ b/app/views/groups/edit.html.erb
@@ -3,7 +3,7 @@
   <input type="submit" value="Add User">
 </form>
 
-<ul>
+<ul id="user-list">
   <% @users.each do |user| %>
     <li><%= user.name %></li>
   <% end %>
@@ -23,7 +23,7 @@
       url: "/groups/<%= @group.id %>/users",
       data: $(this).serialize()
     }).success(function(response) {
-      // Add user to list
+      $("#user-list").append("<li>" + $("input[name=name]").val());
     }).fail(function() {
       // Display error message
     })
