--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,6 +1,7 @@
 <%= link_to "Back", groups_path %>
+<%= link_to "Edit", edit_group_path %>
 
-<ul>
+<ul id="user-list">
   <% @users.each do |user| %>
     <li><%= user.name %></li>
   <% end %>
