--- a/app/views/groups/edit.html.erb
+++ b/app/views/groups/edit.html.erb
@@ -20,7 +20,7 @@
 
     $.ajax({
       type: "post",
-      url: "/groups/<%= @group.id %>/users",
+      url: "/groups/<%= @group.id %>/invitations",
       data: $(this).serialize()
     }).success(function(response) {
       $("#user-list").append("<li>" + $("input[name=name]").val());
