--- a/app/views/groups/_map.js.erb
+++ b/app/views/groups/_map.js.erb
@@ -16,6 +16,8 @@ function updateCurrentUser(){
   var user_id = $("#map-canvas").attr("data-user-id")
   var location_hash = {latitude: latitude, longitude: longitude}
   console.log(location_hash);
+  console.log("/groups/"+group_id+"/users/"+user_id)
+
   $.ajax({
     url:"/groups/"+group_id+"/users/"+user_id,
     type: "get",
@@ -48,7 +50,7 @@ function updateGroupMarkers(){
     dataType: "json",
     type: "get"
   }).done(function(response){
-    console.log("ajax complete");
+    // console.log("ajax complete");
     for (var i = 0; i < response.length; i++){
       var marker = new google.maps.Marker({
         position: new google.maps.LatLng(response[i].latitude, response[i].longitude),
