--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -1,4 +1,4 @@
-<p><%= link_to "Back", groups_path %></p>
+<button id="back-link"><p><%= link_to "Back", groups_path %></p></button>
 
 <p>
   <% if flash[:group_creation_errors] %>
