--- a/app/assets/stylesheets/groups.scss
+++ b/app/assets/stylesheets/groups.scss
@@ -67,6 +67,18 @@ button {
   font-size: 30px;
 }
 
+/*GROUP EDIT*/
+
+#add-user-form {
+  width: 100%;
+  padding: 20px;
+  text-align: center;
+  font-size: 25px;
+  background-color: #E6E6E6;
+}
+
+
+
 /*MAP & CHAT*/
 
 #chat-canvas {
