--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
 <div class="container">
   <% if current_user %>
     <div class="nav">
-      <div id="logo">KYFC</div>
+      <div id="logo">Keep Your <br> Friends Close</div>
         Signed in as <strong><%= current_user.name %></strong>!
         <%= link_to "Sign out", signout_path, id: "sign_out" %>
     </div>
