--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,4 +1,5 @@
 <button id="new-group-link"><p><%= link_to "New Group", new_group_path %></p></button>
+<button id="invitations-link"><p><%= link_to "Invites", invitations_path %></p></button>
 
 <div id="group-list">
   <!-- <ul> -->
