--- a/app/views/groups/edit.html.erb
+++ b/app/views/groups/edit.html.erb
@@ -1,57 +1,79 @@
 <% if current_user.id == @group.admin.id %>
   <form id="add-user">
-    <input type="text" name="name">
+    <input type="text" name="name" id="search">
+    <input type="hidden" id="search-id">
     <input type="submit" value="Add User">
   </form>
 
- <!--  current_user.facebook.get_connections("me", "friends").map do |user|
-    u.facebook.get_object(user["id"]).map do |f|
-      link: f["link"], name: f["name"], id: f["id"]
-    end
-  end -->
-
   <script>
-    var users = <%= User.pluck(:name).to_json.html_safe %>
-    var friends_list = <%= current_user.facebook.get_connections("me", "friends").map { |user| user["name"] }.to_json.html_safe %>
+ //    var users = <%= User.pluck(:name).to_json.html_safe %>
+ //    var friends_list = <%= current_user.facebook.get_connections("me", "friends").map { |user| user["name"] }.to_json.html_safe %>
 
-    var friend_id = <%= current_user.facebook.get_connections("me", "friends").map { |user| current_user.facebook.get_object(user["id"])}.to_json.html_safe %>
+ //    var friend_uid_and_name = <%= current_user.facebook.get_connections("me", "friends").to_json.html_safe %>
 
-    var friends_image = <%= current_user.facebook.get_connections("me", "friends?fields=id,name,picture.type(small)")[0]['picture']['data']['url'].to_json.html_safe %>
+ //    var friend_images = <%= current_user.facebook.get_connections("me", "friends?fields=id,name,picture.type(small)")[0]["picture"]["data"]["url"].to_json.html_safe  %>
 
-    var friend_ids = <%= current_user.facebook.get_connections("me", "friends")[0]["id"] %>
-    var friend_names = <%= current_user.facebook.get_connections("me", "friends")[0]["name"].to_json.html_safe %>
-    var friend_images = <%= current_user.facebook.get_connections("me", "friends?fields=id,name,picture.type(small)")[0]["picture"]["data"]["url"].to_json.html_safe  %>
-    var friend_ids2 = <%= current_user.facebook.get_connections("me", "friends")[1]["id"] %>
-    var friend_names2 = <%= current_user.facebook.get_connections("me", "friends")[1]["name"].to_json.html_safe %>
-    var friend_images2 = <%= current_user.facebook.get_connections("me", "friends?fields=id,name,picture.type(small)")[1]["picture"]["data"]["url"].to_json.html_safe  %>
+ //    var friends_images_array = []
 
-    var friends_images_array = []
+ //    var friend_id = <%= User.find_by(name:"Cordelia Peters").uid.to_json.html_safe %>
 
-    <% current_user.facebook.get_connections("me", "friends?fields=id,name,picture.type(small)").each do |person| %>
-      friends_images_array.push(<%= person["picture"]["data"]["url"].to_json.html_safe  %>)
-    <% end %>
+ //    // console.log(friend_id)
 
-console.log(friends_images_array)
-      var friends = [
-        { "id": friend_ids, "name": friend_names, "image": friend_images },
-        { "id": friend_ids2, "name": friend_names2, "image": friend_images2 }
-      ]
+ //    var friend_imagessssssss = <%= current_user.facebook.get_picture(@found_person).to_json.html_safe %>
 
-    $("input[name=name]").autocomplete({
-      source: friends_list,
-      select: function(event, ui) {
+ // console.log(friend_imagessssssss)
+
+
+  // var friend_imagessssssss = <%= current_user.facebook.get_picture("1078180995532112").to_json.html_safe %>
+
+
+  // <% current_user.facebook.get_connections("me", "friends?fields=id,name,picture.type(small)").to_json.html_safe %>
+
+
+      // var friends = [
+      //   { id: friend_ids, name: friend_names, image: friend_images },
+      // ]
+// console.log(friends)
+
+    // $("input[name=name]").autocomplete({
+    //   source: friends_list,
+    //   select: function(event, ui) {
+    //     $("#project").val()
+    //     url: "/groups/<%= @group.id %>/invitations"
+    //   }
+    // }).data("uiAutocomplete")._renderItem = function(ul, item) {
+    //   return $("<li />")
+    //     .data("item.autocomplete", item)
+    //         .append("<a><img src='" + friend_imagessssssss + "' />" + item.label + "</a>")
+    //         .appendTo(ul);
+    // };
+
+    $(function() {
+
+    var coolbeans = <%= current_user.facebook.get_connections("me", "friends?fields=id,name,picture.type(small)").collect {|item| { id: item["id"], value: item["name"], image: item["picture"]["data"]["url"]} }.to_json.html_safe %>
+
+    $( "#search" ).autocomplete({
+      minLength: 0,
+      source: coolbeans,
+      focus: function( event, ui ) {
+        $( "#search" ).val( ui.item.label );
+        return false;
+      },
+      select: function( event, ui ) {
+        $( "#search" ).val( ui.item.label );
+        $( "#search-id" ).val( ui.item.value );
         url: "/groups/<%= @group.id %>/invitations"
-        window.location.href = ui.item.value;
+        return false;
       }
-    }).data("uiAutocomplete")._renderItem = function(ul, item) {
-      debugger
-      for (var i = 0; i < friends_images_array.length; i++ ) {
-      return $("<li />")
-        .data("item.autocomplete", item)
-            .append("<a><img src='" + friends_images_array[i] + "' />" + item.label + "</a>")
-            .appendTo(ul);
-      }
+    })
+    .autocomplete( "instance" )._renderItem = function( ul, item ) {
+      return $( "<li>" )
+        .append("<a><img src='" + item.image + "' />" + item.label + "</a>")
+        .appendTo( ul );
     };
+  });
+
+
 
     // $("#add-user").on("submit", function(e) {
     //   e.preventDefault();
@@ -67,6 +89,6 @@ console.log(friends_images_array)
 
 <ul id="user-list">
   <% @users.each do |user| %>
-    <li><img src="<%= current_user.facebook.get_object("me?fields=picture")["picture"]["data"]["url"] %>"><%= user.name %></li>
+    <li><img src="<%= current_user.facebook.get_picture(current_user.uid) %>"><%= user.name %></li>
   <% end %>
 </ul>
