invitation works as weel with facebook pic

--- a/app/views/groups/edit.html.erb
+++ b/app/views/groups/edit.html.erb
@@ -73,17 +73,15 @@
     };
   });
 
+    $("#add-user").on("submit", function(e) {
+      e.preventDefault();
 
-
-    // $("#add-user").on("submit", function(e) {
-    //   e.preventDefault();
-
-    //   $.ajax({
-    //     type: "post",
-    //     url: "/groups/<%= @group.id %>/invitations",
-    //     data: $(this).serialize()
-    //   })
-    // })
+      $.ajax({
+        type: "post",
+        url: "/groups/<%= @group.id %>/invitations",
+        data: $(this).serialize()
+      })
+    })
   </script>
 <% end %>
 
