Markers with name and colors

--- a/app/views/groups/_map.js.erb
+++ b/app/views/groups/_map.js.erb
@@ -37,16 +37,17 @@ function updateCurrentUser(){
     mapOptions);
 
 function pickUserIcon(){
+  var firstLetter = "<%= current_user.name[0].upcase %>"
   var colors = ["blue", "brown", "darkgreen", "green", "orange", "paleblue", "pink", "purple", "red", "yellow"]
   var randomColor = colors[Math.floor(Math.random()*colors.length)];
-  var image = "../../assets/images/"+randomColor+"_Marker"+firstLetter+".png"
+  var image = "/assets/"+randomColor+"_Marker"+firstLetter+".png"
   return image;
 }
 
   var marker = new google.maps.Marker({
     position: currentlocation,
-    map: map
-    // icon: pickUserIcon()
+    map: map,
+    icon: pickUserIcon()
   });
 
 // create markers for each user on the same map
