--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -3,8 +3,12 @@
   <div class="choose" id="map-link">Map</div>
 </div>
 
-<button><p><%= link_to "Back", groups_path %>
-<%= link_to "Edit", edit_group_path %></p></button>
+<p>
+  <button><%= link_to "Back", groups_path %></button>
+  <% if current_user.id == @group.admin.id %>
+    <button><%= link_to "Edit", edit_group_path %></button>
+  <% end %>
+</p>
 
 <div id="map-canvas" data-group-id= "<%=@group.id%>", data-user-id= "<%=current_user.id%>">
 </div>
