working on styling

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,6 +12,33 @@
  *
  *= require ../../../vendor/assets/stylesheets/responsive.gs.12col.css
  *= require ../../../vendor/assets/stylesheets/normalize.css
- * require_tree .
+ *= require_tree .
  *= require_self
  */
+
+body {
+  color: white;
+  text-decoration: none;
+}
+
+a {
+  color: #FF9E00;
+  text-decoration: none;
+}
+
+.header {
+  padding: 10px;
+  background-color: #90A437;
+  border-bottom: 4px solid #4E5D0C;
+}
+
+.footer {
+  padding: 10px;
+  background-color: #90A437;
+  border-bottom: 4px solid #4E5D0C;
+}
+
+.button {
+  background-color: #637996;
+  text-align: center;
+}
