--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,6 +1,6 @@
-<div id="chat-map-choice">
-  <div class="choose" id="chat-link">Chat</div>
-  <div class="choose" id="map-link">Map</div>
+<div id="row">
+  <div class="col span_6 button"><p><a>Chat</a></p></div>
+  <div class="col span_6 button"><p><a>Map</a></p></div>
 </div>
 
 <p>
