setup chat and map links

--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,6 +1,6 @@
 <div id="row">
-  <div class="col span_6 button"><p><a>Chat</a></p></div>
-  <div class="col span_6 button"><p><a>Map</a></p></div>
+  <div class="col span_6 button"><p><a href="/groups/<%= @group.id %>/chat">Chat</a></p></div>
+  <div class="col span_6 button"><p><a href="/groups/<%= @group.id %>/map">Map</a></p></div>
 </div>
 
 <p>
