--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -6,6 +6,10 @@
 
   <%@photos.each do |photo|%>
     <div class="photo"><img src="<%= photo.url%>"></div>
+
+  <% if photo.user_id == current_user.id%>
+    <button> Delete </button>
+  <%end%>
   <%end%>
 </div>
 
