Add links for photos and info

--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,6 +1,16 @@
 <div id="row">
-  <div class="col span_6 button"><p><a href="/groups/<%= @group.id %>/chat">Chat</a></p></div>
-  <div class="col span_6 button"><p><a href="/groups/<%= @group.id %>/map">Map</a></p></div>
+  <div class="col span_3 button">
+    <p><a href="/groups/<%= @group.id %>/chat">Chat</a></p>
+  </div>
+  <div class="col span_3 button">
+    <p><a href="/groups/<%= @group.id %>/map">Map</a></p>
+  </div>
+  <div class="col span_3 button">
+    <p><a href="/groups/<%= @group.id %>/photos">Photos</a></p>
+  </div>
+  <div class="col span_3 button">
+    <p><a href="/groups/<%= @group.id %>/info">Info</a></p>
+  </div>
 </div>
 
 <p>
