--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,11 +12,11 @@
  *
  *= require ../../../vendor/assets/stylesheets/responsive.gs.12col.css
  *= require ../../../vendor/assets/stylesheets/normalize.css
- *= require_tree .
- *= require_self
+ * require_tree .
+ * require_self
  */
 
-body {
+/*body {
   color: white;
   text-decoration: none;
 }
@@ -41,4 +41,4 @@ a {
 .button {
   background-color: #637996;
   text-align: center;
-}
+}*/
