Adding navigation header to group pages. Error where not displaying on photos page

--- a/app/views/groups/chat.html.erb
+++ b/app/views/groups/chat.html.erb
@@ -1,7 +1,4 @@
-<div id="chat-map-choice">
-  <div class="choose" id="chat-link">Chat</div>
-  <div class="choose" id="map-link">Map</div>
-</div>
+<%= render partial: "header" %>
 
 <button><p><%= link_to "Back", groups_path %></p></button>
 
