--- a/app/views/groups/photos.html.erb
+++ b/app/views/groups/photos.html.erb
@@ -1,3 +1,5 @@
+<%= render partial: "header" %>
+
 <button><p><%= link_to "Back", groups_path %></p></button>
 
 <div id="take-photo"><button> Take a photo </button></div>
