group navigation header is on all pages

--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -1,3 +1,5 @@
+<%= render partial: "groups/header" %>
+
 <button><p><%= link_to "Back", group_path(@group) %></p></button>
 
 <div id="take-photo"><button> Take a photo </button></div>
