tring to make the map show. fixed id to class in header partial

--- a/app/views/groups/_header.html.erb
+++ b/app/views/groups/_header.html.erb
@@ -1,4 +1,4 @@
-<div id="row">
+<div class="row">
   <div class="col span_3 button">
     <p><a href="/groups/<%= @group.id %>/chat">Chat</a></p>
   </div>
