Users are added by uid

--- a/app/views/groups/edit.html.erb
+++ b/app/views/groups/edit.html.erb
@@ -2,7 +2,7 @@
   <div id="add-user-form">
     <form id="add-user">
       <input type="text" name="name" id="search">
-      <input type="hidden" id="search-id">
+      <input type="hidden" name="uid" value="">
       <input type="submit" value="Add User">
     </form>
 
