--- a/app/views/groups/_edit.js.erb
+++ b/app/views/groups/_edit.js.erb
@@ -21,7 +21,7 @@ $(function() {
     },
     select: function( event, ui ) {
       $( "#search" ).val( ui.item.label );
-      $( "#search-id" ).val( ui.item.value );
+      $( "input[name=uid]" ).val( ui.item.id );
       url: "/groups/<%= @group.id %>/invitations"
       return false;
     }
@@ -33,15 +33,15 @@ $(function() {
   };
 });
 
-    $("#add-user").on("submit", function(e) {
-      e.preventDefault();
+    // $("#add-user").on("submit", function(e) {
+    //   e.preventDefault();
 
-      $.ajax({
-        type: "post",
-        url: "/groups/<%= @group.id %>/invitations",
-        data: $(this).serialize()
-      })
-    })
+    //   $.ajax({
+    //     type: "post",
+    //     url: "/groups/<%= @group.id %>/invitations",
+    //     data: $(this).serialize()
+    //   })
+    // })
 
 $("#add-user").on("submit", function(event) {
   event.preventDefault();
